--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,11 @@
-chardet==3.0.4
-Click==7.0
-DateTime==4.3
+dateTime==4.3
 Flask==1.0.2
 geoip2==2.9.0
-idna==2.8
-itsdangerous==1.1.0
-Jinja2==2.10
-MarkupSafe==1.1.0
-maxminddb==1.4.1
 numpy==1.16.1
 pandas==0.24.1
 phonenumbers==8.10.5
 pycountry==18.12.8
-pymongo==3.7.2
-python-dateutil==2.8.0
-pytz==2018.9
 requests==2.21.0
 scikit-learn==0.20.2
 scipy==1.2.1
-six==1.12.0
 sklearn==0.0
-urllib3==1.24.1
-Werkzeug==0.14.1
-zope.interface==4.6.0
